--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/frontpage/frontpage.css">
-    <title>Mandatory 1 - Front</title>
+    $CSS_LINKS
+    <link rel="stylesheet" href="/pages/frontpage/frontpage.css">
+    <title>$TAB_TITLE</title>
 </head>
-<body class="frontpage">
+<body class="$BODY_CLASS">
     <div class="container">
         <div class="sidebar">
             <div class="nav-links sidebar-div">
@@ -28,12 +29,3 @@
                 <a href="#" id="fontToggle"></a>
             </div>
         </div>
-        <div class="content">
-            <h1>Forside til Mandatory I</h1>
-            <p>Refleksioner over full-stack Node.js</p>
-        </div>
-    </div>
-    <script type="module" src="/frontpage/frontpage.js"></script>
-    <script type="module" src="/assets/js/main.js"></script>
-</body>
-</html>
