--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -32,14 +32,18 @@ body.alt-font {
     font-family: monospace, sans-serif;
 }
 
+p {
+    margin-top: 30px
+}
+
 .container {
     display: grid;
-    grid-template-columns: 15% 1fr;
+    grid-template-columns: 16% 1fr;
     grid-template-rows: 1fr;
     grid-template-areas:
         "sidebar content";
     min-height: 100vh;
-    padding: 30px;
+    max-height: 100vh;
 }
 
 .sidebar {
@@ -94,8 +98,7 @@ body.alt-font {
     bottom: 10px
 }
 
-.misc,
-.admin {
+.misc {
     border-top: 2px solid white;
 }
 
@@ -107,7 +110,11 @@ body.alt-font {
     padding-right: 100px;
     border: 2px solid white;
     min-height: 90vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+
 }
+
 
 
 pre {
@@ -116,10 +123,13 @@ pre {
     padding-top: 10px;
     padding-left: 25px;
     margin-top: 10px;
+    margin-bottom: 10px;
     padding-right: 25px;
     width: fit-content;
     font-size: larger;
 }
+
+
 
 .snippet-javascript,
 .snippet-html {
