--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/styles.css">
     $CSS_LINKS
-    <link rel="stylesheet" href="/pages/frontpage/frontpage.css">
+    <!--<link rel="stylesheet" href="/pages/frontpage/frontpage.css">-->
     <title>$TAB_TITLE</title>
 </head>
 <body class="$BODY_CLASS">
@@ -22,10 +22,11 @@
 
                 </ul>
             </div>
-            <div class="admin sidebar-div">
-                <a href="#" id="admin-link">admin</a>
+            <div class="misc sidebar-div">
+                <a href="/login" class="admin" id="admin-link">admin</a>
             </div>
             <div class="misc sidebar-div">
                 <a href="#" id="fontToggle"></a>
             </div>
         </div>
+        <div class="content">
