--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -45,6 +45,7 @@ p {
         "sidebar content";
     min-height: 100vh;
     max-height: 100vh;
+    max-width: 100vw;
 }
 
 .sidebar {
@@ -84,7 +85,7 @@ p {
 .nodemon .nav-links a.nodemon,
 .client-server-model .nav-links a.client-server-model,
 .type-coercion .nav-links a.type-coercion,
-.admin a.admin  {
+.admin a.admin {
     color: black;
     background-color: white;
     font-weight: bold;
@@ -112,7 +113,7 @@ p {
     border: 2px solid white;
     min-height: 90vh;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
 
 }
 
@@ -121,25 +122,78 @@ p {
 pre {
     border: 1px solid white;
     margin-left: 30px;
-    padding-top: 10px;
+    padding-top: 25px;
     padding-left: 25px;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-right: 25px;
     width: fit-content;
     font-size: larger;
+    position: relative;
 }
 
 
+code::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5px 10px;
+    background-color: transparent;
+    border-bottom: 1px solid white;
+    border-right: 1px solid white;
+    color: #fff;
+    font-size: small;
+  }
 
-.snippet-javascript,
-.snippet-html {
+  code.language-js::before {
+    content: "JavaScript";
+  }
+
+  code.language-html::before {
+    content: "HTML"
+  }
+
+  code.language-terminal::before {
+    content: "Terminal"
+  }
+
+
+
+.code-snippet {
     background-color: #282c34;
     font-family: monospace;
 }
 
-.snippet-command-line {
+.terminal-snippet {
     background-color: rgb(1, 36, 86);
     font-family: monospace;
+}
+
+
+
+.content::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+.content::-webkit-scrollbar-track {
+    background: none;
+}
+
+.content::-webkit-scrollbar-thumb {
+    background: black;
+    border-right: 10px solid white;
+}
+
+
+
+.content::-webkit-scrollbar-thumb:horizontal {
+    background: black;
+    border-bottom: 10px solid white;
+}
+
+.content::-webkit-scrollbar-corner {
+    height: 0;
+    width: 0;
 }
 
