site made responsive

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -46,6 +46,7 @@ p {
     min-height: 100vh;
     max-height: 100vh;
     max-width: 100vw;
+    padding: 15px;
 }
 
 .sidebar {
@@ -58,6 +59,13 @@ p {
     position: relative;
     min-height: 90vh;
 }
+
+.sidebar-div {
+    white-space: normal;
+
+}
+
+
 
 .nav-links ul {
     list-style: none;
@@ -197,3 +205,30 @@ code::before {
     width: 0;
 }
 
+
+
+@media screen and (max-width: 760px) {
+    .container {
+      grid-template-columns: 1fr; /* Change to a single column layout */
+      grid-template-areas:
+      "sidebar"  
+      "content"; 
+    }
+  
+    .sidebar {
+      grid-area: sidebar;
+      margin: 0; /* Remove margin to save space */
+      min-height: auto; /* Allow the sidebar to adjust its height based on content */
+    }
+    
+    .content {
+      margin: 0; /* Remove margin to save space */
+      padding: 15px;
+    }
+
+    pre {
+        font-size: smaller;
+        word-break:break-word;
+
+    }
+  }
