Lots of content added to html pages

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -15,10 +15,10 @@
                     <li><a href="/" class="frontpage">Front</a></li>
                     <li><a href="/client-server-model" class="client-server-model">Client-server Model</a></li>
                     <li><a href="/nodejs" class="nodejs">Node.js</a></li>
+                    <li><a href="/javascript" class="javascript">JavaScript</a></li>
                     <li><a href="/nodemon" class="nodemon">Nodemon</a></li>
                     <li><a href="/express" class="express">Express</a></li>
                     <li><a href="/type-coercion" class="type-coercion">Type coercion</a></li>
-
                 </ul>
             </div>
             <div class="misc sidebar-div">
