--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -37,6 +37,11 @@ p {
     line-height: 1.5
 }
 
+.bullet-points {
+    margin-left: 40px;
+    line-height: 1.5;
+}
+
 .container {
     display: grid;
     grid-template-columns: 16% 1fr;
@@ -93,6 +98,7 @@ p {
 .nodemon .nav-links a.nodemon,
 .client-server-model .nav-links a.client-server-model,
 .type-coercion .nav-links a.type-coercion,
+.javascript .nav-links a.javascript,
 .admin a.admin {
     color: black;
     background-color: white;
@@ -132,7 +138,7 @@ pre {
     margin-left: 30px;
     padding-top: 25px;
     padding-left: 25px;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 10px;
     padding-right: 25px;
     width: fit-content;
