Kangaroo endpoint edited

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -18,7 +18,7 @@
                     <li><a href="/javascript" class="javascript">JavaScript</a></li>
                     <li><a href="/nodemon" class="nodemon">Nodemon</a></li>
                     <li><a href="/express" class="express">Express</a></li>
-                    <li><a href="/kangaroo" class="express">Kangaroo</a></li>
+                    <li><a href="/joey" class="express">Kangaroo</a></li>
                     <li><a href="/type-coercion" class="type-coercion">Type coercion</a></li>
                 </ul>
             </div>
