--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -17,9 +17,10 @@
                     <li><a href="/nodejs" class="nodejs">Node.js</a></li>
                     <li><a href="/javascript" class="javascript">JavaScript</a></li>
                     <li><a href="/nodemon" class="nodemon">Nodemon</a></li>
+                    <li><a href="/import-export" class="import-export">Import/Export</a></li>
                     <li><a href="/express" class="express">Express</a></li>
-                    <li><a href="/joey" class="express">Kangaroo</a></li>
                     <li><a href="/type-coercion" class="type-coercion">Type coercion</a></li>
+                    <li><a href="/joeys" class="joeys">Joeys</a></li>
                 </ul>
             </div>
             <div class="misc sidebar-div">
