--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -13,6 +13,7 @@
             <div class="nav-links sidebar-div">
                 <ul>
                     <li><a href="/" class="frontpage">Front</a></li>
+                    <li><a href="/learning-goals" class="learning-goals">Læringsmål</a></li>
                     <li><a href="/client-server-model" class="client-server-model">Client-server Model</a></li>
                     <li><a href="/nodejs" class="nodejs">Node.js</a></li>
                     <li><a href="/javascript" class="javascript">JavaScript</a></li>
@@ -20,6 +21,7 @@
                     <li><a href="/import-export" class="import-export">Import/Export</a></li>
                     <li><a href="/express" class="express">Express</a></li>
                     <li><a href="/type-coercion" class="type-coercion">Type coercion</a></li>
+                    <li><a href="/rest-api-design" class="rest-api-design">Rest API Design</a></li>
                     <li><a href="/joeys" class="joeys">Joeys</a></li>
                 </ul>
             </div>
