frontpage renamed in navbar

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -12,7 +12,7 @@
         <div class="sidebar">
             <div class="nav-links sidebar-div">
                 <ul>
-                    <li><a href="/" class="frontpage">Front</a></li>
+                    <li><a href="/" class="frontpage">Mandatory I</a></li>
                     <li><a href="/learning-goals" class="learning-goals">Læringsmål</a></li>
                     <li><a href="/client-server-model" class="client-server-model">Client-server Model</a></li>
                     <li><a href="/nodejs" class="nodejs">Node.js</a></li>
